<resources>
    <string name="app_name">Europcar</string>
    <string name="title_activity_update_agence">UpdateAgenceActivity</string>
    <string name="title_activity_accueil">AccueilActivity</string>

    <string name="mail">Adresse Mail</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">S\'inscrire</string>
    <string name="confirm_password">Confirmation Mot de passe</string>
    <string name="modify">Modifier</string>
    <string name="ville">Ville :</string>
    <string name="code_postal">Code postal :</string>
    <string name="voie">Voie :</string>
    <string name="siret">SIRET :</string>
    <string name="raison_sociale">Raison sociale :</string>
    <string name="votre_agence">Votre agence</string>
    <string name="les_vehicules">Les Véhicules</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="est_endommage">Est endommagé</string>
    <string name="le_plein_est_fait">Le plein est fait</string>
    <string name="nombre_de_kilometres">Nombre de kilomètres</string>
    <string name="ajouter_une_photo">Ajouter une photo</string>
    <string name="rendre">Rendre</string>
    <string name="date_de_debut">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="tarif_journalier">Tarif journalier</string>
    <string name="reserver">Réserver</string>
    <string name="places">places</string>
    <string name="location_entre">Location entre</string>
    <string name="et">et</string>
    <string name="jours">jours</string>
    <string name="tarif_journalier_entre">Tarif journalier entre</string>
    <string name="monnaie">€</string>
    <string name="reservation">Réservation</string>
    <string name="location">Location</string>
    <string name="les_reservations">Les Réservations</string>
    <string name="token_register">Code de sécurité</string>
    <string name="error_date">La date de fin doit être supérieur à la date de début</string>
    <string name="error_date_similar" >Les deux dates doivent être differentes</string>
    <string name="error_daily_rate">Le tarif journalier doit être supérieur à 0</string>
</resources>
