<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/votre_agence" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raison_sociale" />

        <EditText
            android:id="@+id/agence_raison_sociale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siret" />

        <EditText
            android:id="@+id/agence_siret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voie" />

        <EditText
            android:id="@+id/agence_voie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_postal" />

        <EditText
            android:id="@+id/agence_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ville" />

        <EditText
            android:id="@+id/agence_ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/agence_btn_submit"
                style="@style/btn_vert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modify" />

        </LinearLayout>


</LinearLayout>