<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/frag_rendu_endommage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/est_endommage"/>

        <CheckBox
            android:id="@+id/frag_rendu_plein_fait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/le_plein_est_fait"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_kilometres"/>

        <EditText
            android:id="@+id/frag_rendu_kilometrage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <Button
            android:id="@+id/frag_btn_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_une_photo"
            style="@style/btn_vert"/>

        <Button
            android:id="@+id/frag_btn_rendre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendre"
            style="@style/btn_vert"/>

</LinearLayout>