<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/frag_vehicule_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VehiculeID" />

    <TextView
        android:id="@+id/frag_vehicule_libelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Libelle" />

    <TextView
        android:id="@+id/frag_vehicule_nb_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NbPlaces" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag_vehicule_loc_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location min" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / " />

        <TextView
            android:id="@+id/frag_vehicule_loc_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location max" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag_vehicule_tarif_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarif min" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / " />

        <TextView
            android:id="@+id/frag_vehicule_tarif_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarif max" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_de_debut"/>

    <EditText
        android:id="@+id/frag_date_debut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_de_fin"/>

    <EditText
        android:id="@+id/frag_date_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarif_journalier"/>

    <EditText
        android:id="@+id/frag_tarif_journalier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <Button
            android:id="@+id/frag_btn_reserver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserver"
            style="@style/btn_vert"/>

    </LinearLayout>

</LinearLayout>